__HEADER__(`Octave News Archive')

<div class="section">
<dl>
<dt>March 27, 2007</dt>
<dd>Version 2.9.10 is now available for ftp.
__MAIL_THREAD__(`maintainers', `2007', `March', `002372')</dd>
<dt>March 1, 2007</dt>
<dd>Thanks to Bob Weigel and Nabble, it is now possible to
__HTTP__(`www.nabble.com/Octave-f1895.html', `search') the
contents of the Octave mailing lists all the way back to the beginning
of time (around 1992).</dd>
<dt>December 7, 2006</dt>
<dd>A new graphics branch of the code is now in the works to keep all
graphics data in Octave to improve compatibility with Matlab and
facilitate newer graphics back-ends.
__MAIL_THREAD__(`maintainers', `2006', `December', `001435')</dd>
<dt>October 2, 2006</dt>
<dd>Version 2.9.9 is now available for ftp.
__MAIL_THREAD__(`maintainers', `2006', `October', `000743')</dd>
<dt>August 24, 2006</dt>
<dd>Version 2.9.8 is now available for ftp.
__MAIL_THREAD__(`maintainers', `2006', `August', `000500')</dd>
<dt>July 28, 2006</dt>
<dd>Version 2.9.7 is now available for ftp.
__MAIL_THREAD__(`maintainers', `2006', `July', `000431')</dd>
<dt>July 27, 2006</dt>
<dd>Fairly complete support for Matlab's MEX interface has been
added to the Octave CVS archive and will be part of the 2.9.7
shapshot.  Please see
__MAIL_THREAD__(`maintainers', `2006', `July', `000424')
for more details.</dd>
<dt>June 29, 2006</dt>
<dd>Please see this
__MAIL_THREAD__(`maintainers', `2006', `June', `000309')
if you are having trouble compiling Octave 2.9.6 with GCC 3.x.  
After applying the patch, you'll need to run autogen.sh and configure
again.  This means you'll need to have a recent version of 
autoconf installed.  Or, you can upgrade to GCC 4.x or you can wait for
2.9.7.  So many options!</dd>
<dt>June 9, 2006</dt>
<dd>Version 2.9.6 is now available for ftp.
__MAIL_THREAD__(`maintainers', `2006', `June', `000281')</dd>
<dt>May 26, 2006</dt>
<dd>Function file cacheing has been improved with hopefully major 
speedups when calling m-file functions.