@@ -30,6 +30,15 @@
 
 <div class="section">
 <dl>
+<dt>May 22, 2007</dt>
+<dd>Version 2.9.11 is now available for ftp and is the new
+"testing" (also "recommended") version.  As noted on the download
+page, 2.9.11 is a pre-release version of Octave 3.0.  It is
+significantly different from Octave 2.1.x, particularly with regard to
+graphics, path handling, and built-in variables.  Please read the
+<a href="NEWS-3.html">NEWS</a> file.
+<a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2007-May/002932.html"
+class="mailthread">[Mailing List Thread]</a></dd>
 <dt>March 27, 2007</dt>
 <dd>Version 2.9.10 is now available for ftp.
 <a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2007-March/002372.html"
